package com.ajzia.simplist.core.util

object TestTags {
  // TopAppBar tags
  const val FILTER_SECTION = "FILTER_SECTION"
  const val SEARCH_FIELD = "SEARCH_FIELD"

  // ColorPicker tags
  const val COLOR_LIST = "COLOR_LIST"
  const val COLOR = "COLOR"

  // Lists Screen
  const val SAVED_LIST = "SAVED_LIST"
  const val LIST_TITLE = "LIST_TITLE"

  // EditList tags
  const val TITLE_FIELD = "TITLE_FIELD"
  const val PRODUCT_FIELD = "PRODUCT_FIELD"
  const val QUANTITY_FIELD = "QUANTITY_FIELD"
  const val CHANGEABLE_QUANTITY_FIELD = "CHANGEABLE_QUANTITY_FIELD"
  const val ADD_REMOVE = "ADD_REMOVE"

  // Products Screen
  const val DIALOG = "DIALOG"
  const val DISMISS_DIALOG = "DISMISS_DIALOG"
  const val PRODUCT_NAME = "PRODUCT_NAME"
  const val PRODUCT_GRID = "PRODUCT_GRID"
}