...
      )
    },
    floatingActionButton = {
      if (!isProductScreen) {
        FAB(
          imageVector = AppIcons.Add,
          contentDescription = "Create new list",
          onClick = {
            navController.navigate(NavGraph.EditList.createRoute(-1))
          }
        )
      }
    },
...
        )
      )
    },
    floatingActionButton = {
      FAB(
        imageVector = AppIcons.Submit,
        contentDescription = "Submit list",
        onClick = { onSubmit() }
      )
    }) { paddingValues ->
    content(paddingValues)
  }
}
