...
      Icon(
        imageVector = (
          if (name.isBlank()) AppIcons.Add
          else AppIcons.Clear
        ),
        contentDescription = (
          if (name.isBlank()) "Add product to the list"
          else "Remove product from the list"
        ),
        tint = checkBoxColor
      )
    } // IconButton

...
