...
        exit = fadeOut() + shrinkHorizontally()
      ) {
        Box {
          IconButton(onClick = { isExpanded = !isExpanded }) {
            Icon(
              imageVector = ImageVector.vectorResource(AppDrawables.Filter),
              contentDescription = "Filter contents",
              modifier = Modifier.size(40.dp)
            )
          }

          if (isProductScreen) {
            FilterDropdownMenu(
...
