...
        )
      } else {
        IconButton(
          imageVector = ImageVector.vectorResource(AppDrawables.Back),
          onClick = { onBack() },
          tint = MaterialTheme.colorScheme.onSurface,
          contentDescription = "Exit search"
        )
      }
    }, // leadingIcon
    trailingIcon = {
      if (query == "" || !isSearch) return@TextField
      IconButton(
        imageVector = AppIcons.Clear,
        onClick = { onClear() },
        tint = MaterialTheme.colorScheme.onSurface,
        contentDescription = "Clear search"
      )
    } // trailingIcon
  )
}

