...
  } // Row
}

@Composable
@Preview(showBackground = true)
fun ListLinePreview() {
  val details = ProductDetails("Carrot", 1, false, 10)

  ListLine(
    details = details,
    colorIdx = 1,
    onChecked = {},
  )
...
